deploy/templates/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-engineermac-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  tls:
    - hosts:
        - engineermac.com
        - www.engineermac.com
      secretName: www.engineermac.com
  defaultBackend:
    service:
      name: engineermac-svc
      port:
        number: 80
  rules:
    - host: www.engineermac.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: engineermac-svc
                port:
                  number: 80
